display last N wins instead of total

--- a/gui/index.html
+++ b/gui/index.html
@@ -20,7 +20,7 @@
                 <th>#</th>
                 <th>Player ID</th>
                 <th>Dice</th>
-                <th>Wins</th>
+                <th>Wins (Last 50)</th>
                 </tr>
             </thead>
             <tbody>
