fix colum/row width/height

--- a/gui/index.html
+++ b/gui/index.html
@@ -16,10 +16,10 @@
         <table id="gameboard" class="table">
             <thead>
                 <tr>
-                <th>#</th>
-                <th>Player ID</th>
-                <th>Dice</th>
-                <th>Wins (Last 50)</th>
+                <th style="width: 5%">#</th>
+                <th style="width: 25%">Player ID</th>
+                <th style="width: 45%">Dice</th>
+                <th style="width: 25%">Wins (Last 50)</th>
                 </tr>
             </thead>
             <tbody>
